--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
     // https://firebase.google.com/docs/web/setup#available-libraries
 
     // Your web app's Firebase configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
-    };
+  const firebaseConfig = {
+  apiKey: "AIzaSyD88bChgYlFLVzjcTfaDSKFFUTf1OdFrnQ",
+  authDomain: "fichinha-6ee4b.firebaseapp.com",
+  projectId: "fichinha-6ee4b",
+  storageBucket: "fichinha-6ee4b.appspot.com",
+  messagingSenderId: "17131831310",
+  appId: "1:17131831310:web:76eafe9241202230657c5f"
+};
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
